# pytask-latex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  _typos.toml  codecov.yml  environment.yml  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: continuous-integration-workflow.yml  main.yml  publish-to-pypi.yml
src/pytask_latex/: __init__.py  _version.py  build_steps.py  collect.py  compilation_steps.py  config.py  execute.py  parametrize.py  path.py  plugin.py  utils.py
tests/: conftest.py  test_collect.py  test_config.py  test_execute.py  test_latex_dependency_scanner.py  test_normal_execution_w_plugin.py  test_parallel.py  test_parametrize.py
tests/resources/: image.eps  image.ps
