[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pytask_latex"
description = "Compile LaTeX documents with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.8"
dependencies = [ "latex-dependency-scanner>=0.1.1", "pluggy>=1.0.0", "pytask>=0.4.0"]
dynamic = [ "version" ]
authors = [ { name = "Tobias Raabe", email = "raabe@poste.de"} ]
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-latex"
Changelog = "https://github.com/pytask-dev/pytask-latex/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-latex"
Github = "https://github.com/pytask-dev/pytask-latex"
Tracker = "https://github.com/pytask-dev/pytask-latex/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = [ "any",]
license-files = [ "LICENSE" ]

[tool.check-manifest]
ignore = ["src/pytask_latex/_version.py"]

[project.entry-points.pytask]
pytask_latex = "pytask_latex.plugin"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
namespaces = false


[tool.setuptools_scm]
write_to = "src/pytask_latex/_version.py"


[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true


[tool.ruff]
target-version = "py38"
select = ["ALL"]
fix = true
unsafe-fixes = true
extend-ignore = [
    # Others.
    "I",  # ignore isort
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "ANN401",  # Allow typing.Any.
    "COM812",  # Comply with ruff-format
    "ISC001",  # Comply with ruff-format
]


[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN", "PLR2004", "S101"]


[tool.ruff.pydocstyle]
convention = "numpy"


[tool.pytest.ini_options]
# Do not add src since it messes with the loading of pytask-parallel as a plugin.
testpaths = ["src", "tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]
