[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pytask_latex"
description = "Compile LaTeX documents with pytask."
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "latex-dependency-scanner>=0.1.3",
    "pluggy>=1.0.0",
    "pytask>=0.4.0",
]
dynamic = ["version"]
authors = [{ name = "Tobias Raabe", email = "raabe@poste.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-latex"
Changelog = "https://github.com/pytask-dev/pytask-latex/blob/main/CHANGES.md"
Documentation = "https://github.com/pytask-dev/pytask-latex"
Github = "https://github.com/pytask-dev/pytask-latex"
Tracker = "https://github.com/pytask-dev/pytask-latex/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
typing = [
    "mypy>=1.10.0",
]

[project.entry-points.pytask]
pytask_latex = "pytask_latex.plugin"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_latex/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-ignore = [
    "ANN401", # Allow typing.Any.
    "COM812", # Comply with ruff-format
    "ISC001", # Comply with ruff-format
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]
