[metadata]
name = pytask_latex
description = Compile LaTeX documents with pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-latex
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-latex/blob/main/CHANGES.md
    Documentation = https://github.com/pytask-dev/pytask-latex
    Github = https://github.com/pytask-dev/pytask-latex
    Tracker = https://github.com/pytask-dev/pytask-latex/issues

[options]
packages = find:
install_requires =
    click
    latex-dependency-scanner>=0.1.1
    pybaum>=0.1.1
    pytask>=0.2
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_latex = pytask_latex.plugin

[check-manifest]
ignore =
    src/pytask_latex/_version.py
